<?xml version="1.0"?>
<package>
  <name>lidartag_msgs</name>
  <version>0.1.0</version>
  <description>The lidartag_msgs package</description>

  <maintainer email="brucebot@todo.todo">brucebot</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

</package>
